# CppCourse

./: CMakeLists.txt  bonus.txt
assignment1/: README.md  myrobot
assignment1/include/: Algorithm.h  House.h  Sensor.h  VacuumCleaner.h
assignment1/input/: input_b.txt
assignment1/output/: output_b.txt
assignment1/src/: VacuumCleaner.cpp  main.cpp
assignment1/tests/: HouseTest.cpp  VacuumCleanerTest.cpp
assignment1/tests_input/: test_input_3.txt
assignment2/: .gitignore  CMakeLists.txt  README.md
assignment2/include/: Algorithm.h  Simulator.h  dirt_sensor.h  utils.h  wall_sensor.h
assignment2/input/: input_1.txt  input_2.txt  input_3.txt
assignment2/output/: output_input_2.txt  output_input_3.txt
assignment2/src/: Algorithm.cpp  Simulator.cpp  main.cpp
assignment3/: .gitignore  CMakeLists.txt
assignment3/algorithm/: Algorithm_a.cpp  Algorithm_a.h  Algorithm_b.cpp  Algorithm_b.h  utils.h
assignment3/house_files/: house_1.house
assignment3/include/: abstract_algorithm.h  battery_meter.h  utils.h
assignment3/input/: input_3.txt
assignment3/output/: output_input_1.txt
assignment3/simulator/: Simulator.h
assignment3/src/: .gitignore  Algorithm.cpp  CMakeLists.txt  Known Issues.xlsx  README.md  delete_and_rebuild.sh  house_1.house-Algorithm_206448649_314939398_A  house_1.house-Algorithm_206448649_314939398_B  house_2.house-Algorithm_206448649_314939398_A  house_2.house-Algorithm_206448649_314939398_B  house_3.house-Algorithm_206448649_314939398_A  house_3.house-Algorithm_206448649_314939398_B  libAlgorithm_206448649_314939398_B.error  main.cpp  summary.csv  utils.cpp
assignment3/src/Algorithm_206448649/: Algorithm_206448649.cpp  Algorithm_206448649.h
assignment3/src/Algorithm_206448649_314939398_A/: Algorithm_206448649_314939398_A.cpp  Algorithm_206448649_314939398_A.h  CMakeLists.txt
assignment3/src/Algorithm_206448649_314939398_B/: Algorithm_206448649_314939398_B.cpp  Algorithm_206448649_314939398_B.h  CMakeLists.txt
assignment3/src/Algorithm_314939398/: Algorithm_314939398.cpp  Algorithm_314939398.h
assignment3/src/algorithm/: AlgorithmRegistration.h  Algorithm_a.cpp  Algorithm_a.h  Algorithm_b.cpp  Algorithm_b.h
assignment3/src/common/: AlgorithmRegistrar.h
assignment3/src/simulator/: AlgorithmRegistrar.cpp  CMakeLists.txt  Simulator.cpp  Simulator.h  main.cpp
assignment3/src/utils/: utils.cpp  utils.h
include/: InputGenerator.h
input/: input_a.txt  input_c.txt
output/: output_a.txt  output_c.txt
src/: Algorithm.cpp  House.cpp  InputGenerator.cpp
tests/: AlgorithmTest.cpp
tests_input/: test_input_1.txt  test_input_2.txt  test_input_4.txt
